@@ -67,6 +67,7 @@ import org.springframework.kafka.support.Acknowledgment;
 import org.springframework.kafka.support.LogIfLevelEnabled;
 import org.springframework.kafka.support.TopicPartitionInitialOffset;
 import org.springframework.kafka.support.TopicPartitionInitialOffset.SeekPosition;
+import org.springframework.kafka.support.TransactionSupport;
 import org.springframework.kafka.support.serializer.DeserializationException;
 import org.springframework.kafka.transaction.KafkaAwareTransactionManager;
 import org.springframework.scheduling.SchedulingAwareRunnable;
@@ -1057,6 +1058,8 @@ public class KafkaMessageListenerContainer<K, V> extends AbstractMessageListener
 					this.logger.trace("Processing " + record);
 				}
 				try {
+					TransactionSupport.setTransactionIdSuffix(
+							this.consumerGroupId + "." + record.topic() + "." + record.partition());
 					this.transactionTemplate.execute(new TransactionCallbackWithoutResult() {
 
 						@Override
@@ -1082,6 +1085,9 @@ public class KafkaMessageListenerContainer<K, V> extends AbstractMessageListener
 						unprocessed.add(iterator.next());
 					}
 					getAfterRollbackProcessor().process(unprocessed, this.consumer, e, true);
+				}
+				finally {
+					TransactionSupport.clearTransactionIdSuffix();
 				}
 			}
 		}
